2000-12-04  Neil Booth  <neilb@earthling.net>

	* g++.old-deja/g++.other/instan1.C, instan2.C: Move to...
	* g++.old-deja/g++.pt/instantiate1.C, instantiate2.C: ...here.
	* gcc.dg/cpp/19960224-2.c, endif.c, if-6.c: Move into...
	* gcc.dg/cpp/extratokens.c: ...here.

2000-12-04  Neil Booth  <neilb@earthling.net>

        * gcc.dg/cpp/assert_trad1.c, assert_trad2.c, assert_trad3.c:
        New tests.

2000-12-03  Kaveh R. Ghazi  <ghazi@teal.rutgers.edu>

	* gcc.c-torture/execute/string-opt-11.c: Add more strspn checks.
	* gcc.c-torture/execute/string-opt-12.c: Add more strcspn checks.

2000-12-03  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.c-torture/execute/20001203-1.c: New test.

2000-12-03  Neil Booth  <neilb@earthling.net>

        * gcc.dg/cpp/macro6.c: New test cases.

2000-12-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c-torture/execute/string-opt-9.c: New test.
	* gcc.c-torture/execute/string-opt-10.c: Likewise.
	* gcc.c-torture/execute/string-opt-11.c: Likewise.
	* gcc.c-torture/execute/string-opt-12.c: Likewise.

	* gcc.c-torture/execute/string-opt-3.c: Add more strcmp checks.
	* gcc.c-torture/execute/string-opt-8.c: Add more strncmp checks.

2000-12-02  Geoffrey Keating  <geoffk@redhat.com>

	* gcc.dg/cpp/if-6.c: New testcase.

	* gcc.dg/20001201-1.c: New testcase.

2000-12-02  Neil Booth  <neilb@earthling.net>

        * g++.old-deja/g++.other/externC4.C,
        g++.old-deja/g++.other/friend10.C: New tests.

2000-12-02  Neil Booth  <neilb@earthling.net>

        * g++.old-deja/g++.other/instan2.C
        * g++.old-deja/g++.other/instan3.C: New test.

2000-12-02  Neil Booth  <neilb@earthling.net>

        * gcc.dg/cpp/c++98.c,c++98-pedantic.c,c89.c,c89-pedantic.c,
        c94.c,c94-pedantic.c,c99.c,c99-pedantic.c,gnuc89.c,gnuc89-pedantic.c,
        gnuc99.c,gnuc99-pedantic.c: New tests.

2000-12-01  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.dg/format-no-exargs-1.c, gcc.dg/format-no-y2k-1.c,